[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0.38"
async-graphql-axum = "3.0.38"
axum = "0.5.5"
bonsaidb = { version = "0.4.1", features = ["local-full"] }
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tower-http = { version = "0.3.3", features = ["cors"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
ulid = { version = "0.5.0", features = ["serde"] }

